--- a/example.html
+++ b/example.html
@@ -1,1 +1,11 @@
-<!doctype html><html lang="zh-cmn-Hans"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>Webpack App</title></head><body><div id="root"></div><script src="example.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="zh-cmn-Hans">
+<head>
+	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title><%= htmlWebpackPlugin.options.title %></title>
+</head>
+<body>
+<div id="root"></div>
+</body>
+</html>
